networkpolicies/allow-pacman-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pacman-27017
spec:
  podSelector:
    matchLabels:
      name: pacman
  policyTypes:
  - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 27017
